# removarr-api

./: .env  Cargo.toml  README.md
hurl/: settings.hurl  voters.hurl
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_voter_table.rs  m20260201_160249_create_settings_table.rs  m20260201_160257_create_series_table.rs  m20260201_160258_create_movies_table.rs  m20260207_190000_create_vote_series_table.rs  m20260207_190001_create_vote_movie_table.rs  m20260207_192000_create_admin_table.rs  m20260207_192001_create_refresh_token_table.rs
src/: app.rs  error.rs  lib.rs  main.rs  openapi.rs  removarr.http
src/auth/: jwt.rs  login.rs  logout.rs  middleware.rs  mod.rs  reset_password.rs
src/db/: mod.rs
src/entity/: admin.rs  mod.rs  movie.rs  refresh_token.rs  series.rs  settings.rs  vote_movie.rs  vote_series.rs  voter.rs
src/movies/: delete.rs  list.rs
src/series/: delete.rs  list.rs
src/settings/: get.rs  put.rs
src/voters/: delete.rs  get.rs  list.rs  patch.rs  post.rs
src/votes_movie/: delete.rs  list.rs  post.rs
src/votes_series/: delete.rs  list.rs  mod.rs  post.rs
src/webhooks/: mod.rs  sonarr.rs
src/webhooks/radarr/: mod.rs  movie_added.rs  movie_delete.rs  movie_download.rs
src/webhooks/sonarr/: mod.rs  series_add.rs  series_delete.rs  series_download.rs  types.rs
tests/: media_deletion_verification_tests.rs  radarr_webhook_tests.rs  settings_tests.rs  sonarr_webhook_tests.rs  vote_endpoint_tests.rs  vote_tests.rs  voters_tests.rs
