[package]
name = "removarr-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-macros = "0.5.0"
http = "1.4.0"
rusqlite = "0.38.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.149"

[dev-dependencies]
tower = "0.5"

[lib]
path = "src/lib.rs"
