[package]
name = "removarr-rust"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
axum = "0.8.8"
axum-macros = "0.5.0"
http = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.149"
sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio", "macros"] }
migration = { path = "migration" }
chrono = "0.4.43"
jsonwebtoken = "10.3.0"
bcrypt = "0.18.0"
uuid = { version = "1.20.0", features = ["v4"] }
rand = "0.9.2"

[dev-dependencies]
tower = "0.5"

[lib]
path = "src/lib.rs"
